# AutoRAG-Research

./: pyproject.toml
autorag_research/embeddings/: bipali.py  colpali.py
autorag_research/reporting/: service.py  ui.py
autorag_research/rerankers/: cohere.py  flag_embedding.py  flag_embedding_llm.py  flashrank.py  openvino.py  voyageai.py
configs/: db.yaml
