[project]
name = "AutoRAG-Research"
version = "0.0.1"
description = "Automate your RAG research."
authors = [{ name = "NomaDamas", email = "vkehfdl1@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
license = {text = "Apache-2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "beir>=2.2.0",
    "typer>=0.15.0",
    "mteb>=1.34.0",
    "bert-score>=0.3.13",
    "datasets<3.0.0",
    "evaluate>=0.4.6",
    "hydra-core>=1.3.0",
    "httpx>=0.20.0",
    "infinity-client>=0.0.77",
    "huggingface-hub>=0.36.0",
    "langchain-core>=0.3.0",
    "nltk>=3.9.2",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "pgvector>=0.4.1",
    "pillow>=12.0.0",
    "platformdirs>=4.5.0",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.0",
    "rich>=14.0.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "sqlalchemy>=2.0.44",
    "tiktoken>=0.12.0",
    "tqdm>=4.60.0",
    "typing-extensions>=4.15.0",
    "tenacity>=9.1.2",
]

[project.scripts]
autorag-research = "autorag_research.cli.app:main"

[project.urls]
Homepage = "https://vkehfdl1.github.io/AutoRAG-Research/"
Repository = "https://github.com/vkehfdl1/AutoRAG-Research"
Documentation = "https://vkehfdl1.github.io/AutoRAG-Research/"

[project.optional-dependencies]
gpu = [
    "colpali-engine>=0.3.13",
    "torch>=2.8.0",
    "transformers>=4.57.1",
    "FlagEmbedding>=1.0.0",
    "flashrank>=0.2.0",
    "sentence-transformers>=3.0.0",
]
reporting = [
    "duckdb>=1.0.0",
    "gradio>=6.0.0",
]
reranker = [
    "cohere>=5.0.0",
    "voyageai>=0.3.0",
]
openvino = [
    "optimum-intel>=1.0.0",
]
all = [
    "colpali-engine>=0.3.13",
    "torch>=2.8.0",
    "transformers>=4.57.1",
    "FlagEmbedding>=1.0.0",
    "flashrank>=0.2.0",
    "sentence-transformers>=3.0.0",
    "duckdb>=1.0.0",
    "gradio>=6.0.0",
    "cohere>=5.0.0",
    "voyageai>=0.3.0",
    "optimum-intel>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "ty>=0.0.1a16",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "pytest-env>=1.2.0",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "mkdocs-typer2>=0.2.0",
    "langchain-openai>=0.3.0",
    "autorag-research",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.claude",
    "/.github",
    "/.pre-commit-config.yaml",
    "/.env.template",
    "/ai_instructions",
    "/docs",
    "/tests",
    "/postgresql",
    "/scripts",
    "/Dockerfile",
    "/docker-compose.yml",
    "/Makefile",
    "/mkdocs.yml",
    "/tox.ini",
    "/uv.lock",
    "/CLAUDE.md",
    "/CONTRIBUTING.md",
]

[tool.hatch.build.targets.wheel]
packages = ["autorag_research"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.10"
root = ["."]

[tool.ty.src]
include = ["autorag_research"]

[tool.pytest]
testpaths = ["tests"]
markers = [
    "gpu: mark test as requiring a GPU to run",
    "api: mark test that needs LLM API call to run",
    "data: mark test that needs external data download",
    "ci_skip: mark test to be skipped in CI environment",
]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    "S311",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603"]

[tool.ruff.format]
preview = true

[tool.uv]
constraint-dependencies = [
    "onnxruntime<1.24; python_version < '3.11'",  # 1.24+ dropped Python 3.10 wheels
]

[tool.uv.sources]
autorag-research = { workspace = true }

[tool.deptry.per_rule_ignores]
DEP001 = ["FlagEmbedding", "optimum"]  # FlagEmbedding package imports as 'FlagEmbedding'; optimum-intel imports as 'optimum.intel'
DEP002 = ["bert-score", "langchain-openai", "FlagEmbedding", "optimum-intel"]  # langchain-openai used via Hydra config instantiation in test, the bert score is used silently via `evaluate` library at Bert Score; FlagEmbedding/optimum-intel are optional packages with non-standard module names

[tool.deptry]
exclude = ["tests/*", "scripts/*", ".venv/*", "venv/*"]
